# ParaCL

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.py  conanfile.txt  pyproject.toml
.github/workflows/: test.yml  test_ubuntu_build.yml  unit_tests.yml
docs/: ParaCL.tex
include/: ANSI_colors.hpp  ast.hpp  cmd.hpp  common.hpp  driver.hpp  environments.hpp  errors.hpp  lexer.hpp  node.hpp
include/ParaCL/: ANSI_colors.hpp  ast.hpp  cmd.hpp  common.hpp  driver.hpp  environments.hpp  lexer.hpp  node.hpp
include/ParaCL/nodes/: array.hpp  assign.hpp  bin_op.hpp  common.hpp  fork.hpp  function.hpp  loop.hpp  lvalue.hpp  print.hpp  scope.hpp  simple_types.hpp  un_op.hpp  variable.hpp
src/: CMakeLists.txt  driver.cpp  grammar.y  lexer.l  parser.y
tests/: CMakeLists.txt  num.in  test.in
tests/end_to_end/: CMakeLists.txt  print_error_tests.py  run_error_tests.py  run_tests.py  run_valid_tests.py
tests/end_to_end/answers_get/: answer_001.ans  answer_002.ans  answer_004.ans  answer_007.ans  answer_011.ans  answer_020.ans
tests/end_to_end/answers_src/: answer_001.ans  answer_006.in  answer_012.ans  answer_026.ans
tests/end_to_end/error/: print_error_tests.py  run_error_tests.py
tests/end_to_end/error/input4tests_in/: input_057.in
tests/end_to_end/error/tests_error_in/: test_006.in  test_008.in  test_009.in  test_010.in  test_016.in  test_020.in  test_021.in  test_022.in  test_024.in  test_026.in  test_027.in  test_028.in  test_029.in  test_032.in  test_034.in  test_036.in  test_037.in  test_039.in  test_040.in  test_041.in  test_043.in  test_044.in  test_045.in  test_046.in  test_050.in  test_051.in  test_053.in  test_056.in  test_058.in  test_060.in  test_061.in  test_062.in  test_064.in  test_065.in  test_066.in  test_067.in  test_068.in  test_070.in  test_071.in  test_072.in  (+2 more)
tests/end_to_end/error/tests_in/: test_001.in  test_005.in  test_012.in  test_015.in  test_018.in  test_023.in  test_030.in  test_033.in  test_038.in  test_047.in  test_048.in  test_049.in  test_052.in  test_053.in  test_054.in  test_055.in  test_056.in  test_059.in  test_063.in  test_066.in  test_067.in  test_068.in  test_069.in  test_073.in  test_075.in  test_076.in
tests/end_to_end/tests_error_in/: test_001.in  test_003.in  test_004.in  test_007.in  test_011.in  test_013.in  test_014.in  test_017.in  test_019.in  test_025.in  test_031.in  test_035.in  test_038.in  test_042.in
tests/end_to_end/tests_in/: test_006.in
tests/end_to_end/tests_valid_in/: test_003.in  test_010.in  test_012.in  test_013.in  test_014.in  test_015.in  test_020.in  test_021.in  test_024.in  test_025.in  test_026.in  test_027.in
tests/end_to_end/valid/: run_valid_tests.py
tests/end_to_end/valid/answers_get/: answer_018.ans  answer_022.ans  answer_023.ans  answer_026.ans  answer_035.ans  answer_036.ans  answer_037.ans  answer_038.ans  answer_043.ans  answer_044.ans  answer_045.ans
tests/end_to_end/valid/answers_src/: answer_003.ans  answer_012.ans  answer_019.ans  answer_021.ans  answer_025.ans  answer_029.ans  answer_031.ans  answer_035.ans  answer_038.ans  answer_039.ans  answer_find.ans  answer_mix_functions.ans  answer_negative.ans
tests/end_to_end/valid/input4tests_in/: input_even.in  input_find.in  input_max.in  input_negative.in  input_sort.in  input_sum.in
tests/end_to_end/valid/tests_in/: test_001.in  test_005.in  test_008.in  test_011.in  test_016.in  test_017.in  test_023.in  test_024.in  test_032.in  test_035.in  test_038.in  test_039.in  test_even.in  test_fib.in  test_mix_functions.in  test_prime.in
tests/end_to_end/valid/tests_valid_in/: test_002.in  test_004.in  test_007.in  test_012.in  test_018.in  test_019.in  test_022.in  test_028.in  test_029.in  test_030.in  test_031.in  test_032.in  test_033.in  test_035.in  test_036.in  test_037.in  test_factorial.in  test_find.in  test_max.in  test_mix_functions.in  test_negative.in  test_recursive_fib.in  test_reverse.in  test_sort.in  test_sum.in
tests/unit/: CMakeLists.txt  paracl_unit_tests.cpp
